plugins {
    id 'groovy'
    id 'java'
    id 'application'
}

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    mainClass = 'cluster.JeneticsMain'
    applicationDefaultJvmArgs = ['--add-modules', 'jdk.incubator.vector']
}

task runESQ(type: JavaExec) {
    group = "Execution"
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'cluster.JeneticsMain'
    jvmArgs += ['--add-modules', 'jdk.incubator.vector']
}

task runBuildIndex(type: JavaExec) {
    group = "Execution"
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'index.BuildIndex'
    jvmArgs += ['--add-modules', 'jdk.incubator.vector']
}

dependencies {

    implementation "org.apache.groovy:groovy:5.0.4"
    implementation "org.apache.groovy:groovy-json:5.0.4"

    implementation "io.jenetics:jenetics:7.2.0"
    implementation "io.jenetics:jenetics.ext:7.2.0"

    implementation "org.apache.lucene:lucene-core:10.4.0"
    implementation "org.apache.lucene:lucene-analysis-common:10.4.0"
    implementation "org.apache.lucene:lucene-classification:10.4.0"
    implementation "org.apache.lucene:lucene-queryparser:10.4.0"

    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
    testImplementation "org.spockframework:spock-core:2.4-groovy-5.0"
}

test {
    useJUnitPlatform()
}